# url-lookup-service

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  bad_urls.txt  docker-compose.yml  init.sql  pyproject.toml
app/: db.py  main.py  service.py  storage.py
tests/: test_urlinfo.py
